--- a/app/views/hangouts/index.html.erb
+++ b/app/views/hangouts/index.html.erb
@@ -1,18 +1,26 @@
 <h1>Hangouts#index</h1>
 <p>Find me in app/views/hangouts/index.html.erb</p>
 <div>
-  <div id="message-display">
-  </div>
+  <% @messages.each do |message| %>
+    <article class="message">
+      <div class="message-header">
+        <%= message.user.email %>
+      </div>
+      <div class="message-body">
+        <%= message.body %>
+      </div>
+    </article>
+  <% end %>
   <div id="message-form">
-    <form action="" id="message-form">
+    <%= form_with model: @message, local: false do |f| %>
       <div class="field has-addons">
         <div class="control">
-          <input class="input" id="message-input" type="text">
+          <%= f.text_field :body, id: 'message-input', class: 'input' %>
         </div>
         <div class="control">
-          <input type="submit" value="Send Message" class="button is-primary">
+          <%= f.submit 'Send Message', class: 'button is-primary' %>
         </div>
       </div>
-    </form>
+    <% end %>
   </div>
 </div>
